Cleanup PCEPTopologyProvider a bit
Prior to diving into untangling activation mess, perform self-contained
cleanups in PCEPTopologyProvider.

JIRA: BGPCEP-983
Change-Id: I456a852665dd28a64c71251a56aaf69c6b25f74b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>